# core-banking-service/docs/swagger.yaml
@@ -13,6 +13,8 @@ definitions:
         type: string
       middle_name:
         type: string
+      password:
+        type: string
       phone_number:
         type: string
     type: object
@@ -35,6 +37,8 @@ definitions:
       lastName:
         type: string
       middleName:
+        type: string
+      password:
         type: string
       phoneNumber:
         type: string
